Added code so we can easily eval accuracy against test set

--- a/src/ngram/ngram_model.ipynb
+++ b/src/ngram/ngram_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "0fecf76f",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,6 @@
     "pip install pandas\n",
     "pip install sentence-transformers\n",
     "\n",
-    "#Had to add these to make it work locally\n",
     "pip install matplotlib\n",
     "pip install seaborn\n",
     "pip install sentence_transformers\n",
@@ -237,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 54,
    "id": "a2d06697",
    "metadata": {},
    "outputs": [
@@ -270,28 +269,38 @@
     "import importlib\n",
     "from collections import Counter\n",
     "import random\n",
+    "import string\n",
     "\n",
     "\n",
-    "from ngram_helpers import NGramDataLoader\n",
+    "from helpers import DataLoader\n",
     "\n",
     "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "print(f\"Using {DEVICE} device\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a1065d6f",
+   "metadata": {},
+   "source": [
+    "## Load the data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "id": "f24c3941",
    "metadata": {},
    "outputs": [],
    "source": [
     "parent_dir = os.path.dirname(os.path.abspath(\"__file__\"))\n",
-    "data_dir = os.path.join(parent_dir, \"../../data\")"
+    "data_dir = os.path.join(parent_dir, \"../../data\")\n",
+    "test_dir = os.path.join(parent_dir, \"../../test\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 56,
    "id": "6cb0ecb0",
    "metadata": {},
    "outputs": [
@@ -304,14 +313,14 @@
     }
    ],
    "source": [
-    "engram_loader = NGramDataLoader()\n",
+    "engram_loader = DataLoader()\n",
     "\n",
     "engram_loader.load(f\"{data_dir}/parsed_data\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 57,
    "id": "99a38405",
    "metadata": {},
    "outputs": [
@@ -342,23 +351,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>we'll be crossing the border in less than one ...</td>\n",
+       "      <td>what were your duties as first officer of deep...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>*** lpd.</td>\n",
+       "      <td>riker to enterprise. i'm ready to leave, now.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>i'll run a microcellular scan.</td>\n",
+       "      <td>... do this?</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>no.</td>\n",
+       "      <td>i don't care .... i really wouldn't, but i don...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>oh, geordi, it's started. what if what happene...</td>\n",
+       "      <td>do you know what they're trying to do? they're...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -366,14 +375,14 @@
       ],
       "text/plain": [
        "                                                   0\n",
-       "0  we'll be crossing the border in less than one ...\n",
-       "1                                           *** lpd.\n",
-       "2                     i'll run a microcellular scan.\n",
-       "3                                                no.\n",
-       "4  oh, geordi, it's started. what if what happene..."
+       "0  what were your duties as first officer of deep...\n",
+       "1      riker to enterprise. i'm ready to leave, now.\n",
+       "2                                       ... do this?\n",
+       "3  i don't care .... i really wouldn't, but i don...\n",
+       "4  do you know what they're trying to do? they're..."
       ]
      },
-     "execution_count": 8,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 58,
    "id": "0bc08127",
    "metadata": {},
    "outputs": [
@@ -415,23 +424,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>dave, i'm going to stand up on the rover. get ...</td>\n",
+       "      <td>any idea what's causing it?</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>i look forward to it.</td>\n",
+       "      <td>is it what? yeah, we're aos now. yeah.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>lieutenant chapman, structural engineering.</td>\n",
+       "      <td>that or he's dead. he should have been here ho...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>imperative thirty two, codicil six twenty six....</td>\n",
+       "      <td>roger. out. ' 04 20 07 37 lmp - - current read...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>norcadian. what species are you?</td>\n",
+       "      <td>no response, captain.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -439,14 +448,14 @@
       ],
       "text/plain": [
        "                                                   0\n",
-       "0  dave, i'm going to stand up on the rover. get ...\n",
-       "1                              i look forward to it.\n",
-       "2        lieutenant chapman, structural engineering.\n",
-       "3  imperative thirty two, codicil six twenty six....\n",
-       "4                   norcadian. what species are you?"
+       "0                        any idea what's causing it?\n",
+       "1             is it what? yeah, we're aos now. yeah.\n",
+       "2  that or he's dead. he should have been here ho...\n",
+       "3  roger. out. ' 04 20 07 37 lmp - - current read...\n",
+       "4                              no response, captain."
       ]
      },
-     "execution_count": 9,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 59,
    "id": "d379b28d",
    "metadata": {},
    "outputs": [
@@ -488,23 +497,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>yes, sir.</td>\n",
+       "      <td>i'll get it for you, if you can't. 176 onfiden...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>on the lower right side.</td>\n",
+       "      <td>you will face justice at my hands!</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>going off the comm.</td>\n",
+       "      <td>i told you it was just a matter of time before...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>on board one of our transports. they were carr...</td>\n",
+       "      <td>roger, go at 2. pgns and ags compare.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>report.</td>\n",
+       "      <td>you don't even know what i was going to say.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -512,20 +521,134 @@
       ],
       "text/plain": [
        "                                                   0\n",
-       "0                                          yes, sir.\n",
-       "1                           on the lower right side.\n",
-       "2                                going off the comm.\n",
-       "3  on board one of our transports. they were carr...\n",
-       "4                                            report."
+       "0  i'll get it for you, if you can't. 176 onfiden...\n",
+       "1                 you will face justice at my hands!\n",
+       "2  i told you it was just a matter of time before...\n",
+       "3              roger, go at 2. pgns and ags compare.\n",
+       "4       you don't even know what i was going to say."
       ]
      },
-     "execution_count": 10,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "engram_loader.test_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac739a4f",
+   "metadata": {},
+   "source": [
+    "## Implement the NGram model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "8abe8f18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NGramModel:\n",
+    "\n",
+    "    def predict(self, data):\n",
+    "        # TODO: IMPLEMENT NGRAM MODEL\n",
+    "        preds = []\n",
+    "        for inp in data:\n",
+    "            # this model just returns a hardcoded response\n",
+    "            top_guesses = \"ast\"\n",
+    "            preds.append(top_guesses)\n",
+    "        return preds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5021003e",
+   "metadata": {},
+   "source": [
+    "# Eval\n",
+    "\n",
+    "Test the accuracy of the model against the test data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "5095b389",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_pred( preds, fname):\n",
+    "    with open(fname, 'wt') as f:\n",
+    "        for p in preds:\n",
+    "            f.write('{}\\n'.format(p))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "9967cf4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = NGramModel()\n",
+    "\n",
+    "predictions = model.predict(engram_loader.test_data[0])\n",
+    "\n",
+    "write_pred(predictions, f\"{test_dir}/pred.txt\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca059357",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_accuracy(pred, gold):\n",
+    "    correct = 0\n",
+    "    for i, (p, g) in enumerate(zip(pred, gold)):\n",
+    "        right = g in p\n",
+    "\n",
+    "        correct += right\n",
+    "    return correct/len(gold)\n",
+    "    \n",
+    "\n",
+    "\n",
+    "def load_true():\n",
+    "    with open(f\"{test_dir}/answer.txt\", encoding='utf-8') as f:\n",
+    "        loaded = []\n",
+    "        for line in f:\n",
+    "            line = line[:-1].lower()\n",
+    "            loaded.append(line)\n",
+    "        return loaded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "5a4857e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success rate: 0.16611895096333526\n",
+      "Success rate: None\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "y_true = load_true()\n",
+    "accuracy = get_accuracy(predictions, y_true)\n",
+    "\n",
+    "print(f'Success rate: {accuracy}'.format())"
    ]
   }
  ],
