FOrgot to save a few files

--- a/src/data_parsing/make_datasets.ipynb
+++ b/src/data_parsing/make_datasets.ipynb
@@ -421,10 +421,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "04c4375a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>roger. the clock has started. we have yaw.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>roger; tower. yaw's complete. we're into roll,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>roger, geno. looking great. thrust good on all...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>okay, babe. it 's looking good here.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>roll is complete. we are pitching.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   0\n",
+       "0         roger. the clock has started. we have yaw.\n",
+       "1  roger; tower. yaw's complete. we're into roll,...\n",
+       "2  roger, geno. looking great. thrust good on all...\n",
+       "3               okay, babe. it 's looking good here.\n",
+       "4                 roll is complete. we are pitching."
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dialogue = pd.DataFrame(clean_dialogue)\n",
     "\n",
@@ -434,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "95d47075",
    "metadata": {},
    "outputs": [
@@ -462,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 25,
    "id": "f230b60b",
    "metadata": {},
    "outputs": [],
@@ -476,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 26,
    "id": "8d7812be",
    "metadata": {},
    "outputs": [],
@@ -489,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 27,
    "id": "6522a342",
    "metadata": {},
    "outputs": [
@@ -504,7 +567,7 @@
        "Name: message, dtype: object"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 28,
    "id": "93159892",
    "metadata": {},
    "outputs": [
@@ -542,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 29,
    "id": "90782d98",
    "metadata": {},
    "outputs": [],
