cleaned up data to remove punctuation and fixed test data to only split inside words and not on whitespace

--- a/src/data_parsing/make_datasets.ipynb
+++ b/src/data_parsing/make_datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "id": "28833f39",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "id": "a0f41c78",
    "metadata": {},
    "outputs": [
@@ -189,6 +189,7 @@
     "import numpy as np\n",
     "import importlib\n",
     "from collections import Counter\n",
+    "import string\n",
     "\n",
     "# import QSFNN\n",
     "# importlib.reload(QSFNN)\n",
@@ -199,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
    "id": "b674bf48",
    "metadata": {},
    "outputs": [
@@ -219,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 58,
    "id": "688d13a3",
    "metadata": {},
    "outputs": [],
@@ -231,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 59,
    "id": "0904bf64",
    "metadata": {},
    "outputs": [
@@ -318,7 +319,7 @@
        "4                 Roll is complete. We are pitching.  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 60,
    "id": "908d0565",
    "metadata": {},
    "outputs": [],
@@ -339,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 61,
    "id": "6f732264",
    "metadata": {},
    "outputs": [
@@ -363,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "1b2ad459",
    "metadata": {},
    "outputs": [
@@ -372,8 +373,7 @@
      "output_type": "stream",
      "text": [
       "Counter({' ': 2049011, 'e': 887752, 't': 803702, 'o': 726946, 'a': 631592, 'i': 495660, 'n': 478271, 'r': 429283, 'h': 414336, 's': 407060, 'l': 321261, '.': 307345, 'u': 272136, 'd': 264813, 'y': 227812, 'g': 220862, 'c': 201774, 'w': 174847, ',': 168867, 'm': 168357, 'p': 143206, 'k': 138371, 'f': 123640, 'b': 115091, \"'\": 107150, '-': 89039, 'v': 80173, '0': 75514, '1': 51513, '2': 44407, '_': 37795, '5': 34234, '3': 32895, '4': 28397, '?': 27432, 'j': 24275, '6': 19258, ';': 18015, '7': 17305, '8': 14368, '9': 12991, ':': 9856, 'x': 9465, '*': 8922, 'q': 7425, 'z': 6531, '(': 6245, ')': 6140, '\"': 5376, '/': 4889, '!': 2861, '°': 2129, ']': 1932, '[': 1602, '%': 891, '{': 878, '}': 600, '&': 563, '·': 512, '#': 327, '$': 284, '=': 208, '¢': 146, '£': 115, '¥': 111, '<': 106, '©': 85, '±': 82, '>': 82, '+': 63, '\\\\': 52, '~': 32, '×': 18, '^': 15, '@': 11, '®': 7, '½': 6, '¸': 6, '|': 6, '§': 3, '¼': 1, 'ù': 1})\n",
-      "82\n",
-      "['½', '©', '@', '±', '¥', '×', '£', '<', '¢', '\\\\', '^', '~', '§', '>', '+', '¸', '®', '¼', '|', 'ù']\n"
+      "82\n"
      ]
     }
    ],
@@ -389,39 +389,33 @@
     "to_remove = []\n",
     "\n",
     "for char in char_counts:\n",
-    "    \n",
     "    if char_counts[char] < 150:\n",
     "        to_remove.append(char)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b56cc39c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 63,
    "id": "cf135d48",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "clean_dialogue = []\n",
     "joined = ''.join(to_remove)\n",
     "joined+=\"{}[]°\"\n",
+    "joined+=string.punctuation\n",
     "\n",
     "trans = str.maketrans('', '', joined)\n",
     "\n",
     "for line in dialogue:\n",
-    "    clean_dialogue.append(line.translate(trans))"
+    "    clean_dialogue.append(line.translate(trans))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 64,
    "id": "04c4375a",
    "metadata": {},
    "outputs": [
@@ -452,23 +446,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>roger. the clock has started. we have yaw.</td>\n",
+       "      <td>roger the clock has started we have yaw</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>roger; tower. yaw's complete. we're into roll,...</td>\n",
+       "      <td>roger tower yaws complete were into roll bob</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>roger, geno. looking great. thrust good on all...</td>\n",
+       "      <td>roger geno looking great thrust good on all fi...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>okay, babe. it 's looking good here.</td>\n",
+       "      <td>okay babe it s looking good here</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>roll is complete. we are pitching.</td>\n",
+       "      <td>roll is complete we are pitching</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -476,14 +470,14 @@
       ],
       "text/plain": [
        "                                                   0\n",
-       "0         roger. the clock has started. we have yaw.\n",
-       "1  roger; tower. yaw's complete. we're into roll,...\n",
-       "2  roger, geno. looking great. thrust good on all...\n",
-       "3               okay, babe. it 's looking good here.\n",
-       "4                 roll is complete. we are pitching."
+       "0            roger the clock has started we have yaw\n",
+       "1       roger tower yaws complete were into roll bob\n",
+       "2  roger geno looking great thrust good on all fi...\n",
+       "3                   okay babe it s looking good here\n",
+       "4                   roll is complete we are pitching"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 65,
    "id": "95d47075",
    "metadata": {},
    "outputs": [
@@ -525,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 66,
    "id": "f230b60b",
    "metadata": {},
    "outputs": [],
@@ -539,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 71,
    "id": "8d7812be",
    "metadata": {},
    "outputs": [],
@@ -547,27 +541,86 @@
     "star_trek_dialogue = pd.read_json(f\"{data_dir}/raw_data/star_trek_raw_lines.json\")\n",
     "star_trek_dialogue = star_trek_dialogue[\"message\"].str.lower()\n",
     "star_trek_dialogue.replace('', np.nan, inplace=True)\n",
-    "star_trek_dialogue.dropna(inplace=True) "
+    "star_trek_dialogue.dropna(inplace=True) \n",
+    "\n",
+    "clean_dialogue = []\n",
+    "joined = ''.join(to_remove)\n",
+    "joined+=\"{}[]°\"\n",
+    "joined+=string.punctuation\n",
+    "\n",
+    "trans = str.maketrans('', '', joined)\n",
+    "\n",
+    "for line in star_trek_dialogue:\n",
+    "    clean_dialogue.append(line.translate(trans))\n",
+    "\n",
+    "star_trek_dialogue = pd.DataFrame(clean_dialogue)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 72,
    "id": "6522a342",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>check the circuit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>all operating sir</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>it cant be the screen then definitely somethin...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>it could be these meteorites</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>no its something else theres still something o...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0                                   check the circuit.\n",
-       "1                                  all operating, sir.\n",
-       "2    it can't be the screen then. definitely someth...\n",
-       "3                        it could be these meteorites.\n",
-       "4    no, it's something else. there's still somethi...\n",
-       "Name: message, dtype: object"
+       "                                                   0\n",
+       "0                                  check the circuit\n",
+       "1                                  all operating sir\n",
+       "2  it cant be the screen then definitely somethin...\n",
+       "3                       it could be these meteorites\n",
+       "4  no its something else theres still something o..."
       ]
      },
-     "execution_count": 27,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 74,
    "id": "93159892",
    "metadata": {},
    "outputs": [
@@ -605,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 75,
    "id": "90782d98",
    "metadata": {},
    "outputs": [],
