--- a/src/data_parsing/make_test_data.ipynb
+++ b/src/data_parsing/make_test_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "420fc012",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "id": "5e8950a1",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "6f899f45",
    "metadata": {},
    "outputs": [],
@@ -226,11 +226,42 @@
     "    y_true = []\n",
     "\n",
     "    for i, line in enumerate(data):\n",
-    "        #The max point we can split at is 1 minus the length of the string since we need one char for y_true\n",
-    "        max_split_index = len(line)-1\n",
-    "        split_index = random.randint(min(min_input_size, max_split_index), min(max_split_index, max_input_size))\n",
-    "        x.append(line[0:split_index])\n",
-    "        y_true.append(line[split_index])\n",
+    "        if line != \"\" and type(line) == str:\n",
+    "            \n",
+    "            words = line.split()\n",
+    "\n",
+    "            splittable_words = []\n",
+    "            \n",
+    "            # We only split within words since we will not need to predict whitespace\n",
+    "            #Since we know we will get minimum one character, of the word and will not predict whitespace, we will only split words of at least 3 characters\n",
+    "            for i,word in enumerate(words):\n",
+    "                if len(word) >= 3:\n",
+    "                    splittable_words.append((word, i))\n",
+    "\n",
+    "            if len(splittable_words) > 0:\n",
+    "\n",
+    "                #Pick a random word to split\n",
+    "                split_word_index = random.randint(0, len(splittable_words)-1)\n",
+    "                \n",
+    "                #Get the index and the word to split\n",
+    "                to_split, og_index = splittable_words[split_word_index]\n",
+    "\n",
+    "                split_index = random.randint(1, len(to_split)-1) #Get a spot to split. It cannot be first or last character\n",
+    "                \n",
+    "                #split the word\n",
+    "                splitted = to_split[0:split_index]\n",
+    "\n",
+    "                # Record the expected y value\n",
+    "                y = to_split[split_index]\n",
+    "\n",
+    "                # Split our words to only get ones that come before the split word\n",
+    "                res = words[0:og_index]\n",
+    "\n",
+    "                #Add back in the word we split\n",
+    "                res.append(splitted)\n",
+    "\n",
+    "                x.append(\" \".join(res))\n",
+    "                y_true.append(y)\n",
     "        \n",
     "\n",
     "    return x, y_true\n"
@@ -238,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 85,
    "id": "05de8b94",
    "metadata": {},
    "outputs": [],
@@ -249,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 79,
    "id": "834cb79d",
    "metadata": {},
    "outputs": [],
@@ -263,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 90,
    "id": "bf2802ff",
    "metadata": {},
    "outputs": [],
@@ -273,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 91,
    "id": "47474a58",
    "metadata": {},
    "outputs": [],
@@ -285,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 92,
    "id": "1a3c0933",
    "metadata": {},
    "outputs": [],
