Removed puncuation and other tweaks. Now produces much better results

--- a/src/data_parsing/make_datasets.ipynb
+++ b/src/data_parsing/make_datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 265,
    "id": "28833f39",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 266,
    "id": "a0f41c78",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 267,
    "id": "b674bf48",
    "metadata": {},
    "outputs": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 268,
    "id": "688d13a3",
    "metadata": {},
    "outputs": [],
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 269,
    "id": "0904bf64",
    "metadata": {},
    "outputs": [
@@ -319,7 +319,7 @@
        "4                 Roll is complete. We are pitching.  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 270,
    "id": "908d0565",
    "metadata": {},
    "outputs": [],
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 271,
    "id": "6f732264",
    "metadata": {},
    "outputs": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 272,
    "id": "1b2ad459",
    "metadata": {},
    "outputs": [
@@ -395,103 +395,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "cf135d48",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "clean_dialogue = []\n",
-    "joined = ''.join(to_remove)\n",
-    "joined+=\"{}[]°\"\n",
-    "joined+=string.punctuation\n",
-    "\n",
-    "trans = str.maketrans('', '', joined)\n",
-    "\n",
-    "for line in dialogue:\n",
-    "    clean_dialogue.append(line.translate(trans))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "id": "04c4375a",
+   "execution_count": 273,
+   "id": "534f9b64",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>roger the clock has started we have yaw</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>roger tower yaws complete were into roll bob</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>roger geno looking great thrust good on all fi...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>okay babe it s looking good here</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>roll is complete we are pitching</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                                   0\n",
-       "0            roger the clock has started we have yaw\n",
-       "1       roger tower yaws complete were into roll bob\n",
-       "2  roger geno looking great thrust good on all fi...\n",
-       "3                   okay babe it s looking good here\n",
-       "4                   roll is complete we are pitching"
+       "0           roger. the clock has started. we have yaw.\n",
+       "1    roger; tower. yaw's complete. we're into roll,...\n",
+       "2    roger, geno. looking great. thrust good on all...\n",
+       "3                 okay, babe. it 's looking good here.\n",
+       "4                   roll is complete. we are pitching.\n",
+       "Name: dialogue, dtype: object"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 273,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dialogue = pd.DataFrame(clean_dialogue)\n",
-    "\n",
-    "# dialogue = dialogue.sample(frac=1).reset_index(drop=True)\n",
-    "dialogue.head()\n"
+    "dialogue.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 274,
+   "id": "cf135d48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def clean_data(input):\n",
+    "    clean_dialogue = []\n",
+    "    joined = ''.join(to_remove)\n",
+    "    joined+=\"{}[]°\"\n",
+    "    joined+=string.punctuation\n",
+    "\n",
+    "    trans = str.maketrans('', '', joined)\n",
+    "\n",
+    "    for line in input:\n",
+    "        cleaned = line.translate(trans)\n",
+    "        \n",
+    "        clean_dialogue.append(cleaned)\n",
+    "\n",
+    "        \n",
+    "   \n",
+    "    return pd.DataFrame(clean_dialogue, columns=['dialogue'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
    "id": "95d47075",
    "metadata": {},
    "outputs": [
@@ -499,18 +455,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100608 21559 21560\n"
+      "                                                 dialogue\n",
+      "0                 roger the clock has started we have yaw\n",
+      "1            roger tower yaws complete were into roll bob\n",
+      "2       roger geno looking great thrust good on all fi...\n",
+      "3                        okay babe it s looking good here\n",
+      "4                        roll is complete we are pitching\n",
+      "...                                                   ...\n",
+      "143722  330 169 15 08 03 15 31 hornet do you have an e...\n",
+      "143723  the condition of crew  4000  3500 feet on the ...\n",
+      "143724  okay our splashdown error isby latitude longit...\n",
+      "143725  apollo 11 at 1500 feet 08 c3 17 27 hornet horn...\n",
+      "143726   300 feet 08 03 17 56 swim 1 roger youre looki...\n",
+      "\n",
+      "[142053 rows x 1 columns]\n",
+      "99437 21308 21308\n"
      ]
     }
    ],
    "source": [
-    "train_end = int(0.7 * len(clean_dialogue))\n",
-    "dev_end = int(0.85 * len(clean_dialogue))\n",
+    "dialogue_clean = clean_data(dialogue)\n",
+    "\n",
+    "dialogue_clean.head()\n",
+    "\n",
+    "dialogue_clean.replace('', np.nan, inplace=True)\n",
+    "dialogue_clean.dropna(inplace=True) \n",
+    "\n",
+    "print(dialogue_clean)\n",
+    "train_end = int(0.7 * len(dialogue_clean))\n",
+    "dev_end = int(0.85 * len(dialogue_clean))\n",
+    "\n",
+    "\n",
     "\n",
     "# Split the DataFrame\n",
-    "train_df = dialogue.iloc[:train_end]\n",
-    "dev_df   = dialogue.iloc[train_end:dev_end]\n",
-    "test_df  = dialogue.iloc[dev_end:]\n",
+    "train_df = dialogue_clean.iloc[:train_end]\n",
+    "dev_df   = dialogue_clean.iloc[train_end:dev_end]\n",
+    "test_df  = dialogue_clean.iloc[dev_end:]\n",
     "\n",
     "# Optional: check sizes\n",
     "print(len(train_df), len(dev_df), len(test_df))\n",
@@ -519,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 276,
    "id": "f230b60b",
    "metadata": {},
    "outputs": [],
@@ -533,32 +513,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 277,
    "id": "8d7812be",
    "metadata": {},
    "outputs": [],
    "source": [
     "star_trek_dialogue = pd.read_json(f\"{data_dir}/raw_data/star_trek_raw_lines.json\")\n",
     "star_trek_dialogue = star_trek_dialogue[\"message\"].str.lower()\n",
+    "\n",
+    "star_trek_dialogue = clean_data(star_trek_dialogue)\n",
+    "\n",
     "star_trek_dialogue.replace('', np.nan, inplace=True)\n",
     "star_trek_dialogue.dropna(inplace=True) \n",
     "\n",
-    "clean_dialogue = []\n",
-    "joined = ''.join(to_remove)\n",
-    "joined+=\"{}[]°\"\n",
-    "joined+=string.punctuation\n",
-    "\n",
-    "trans = str.maketrans('', '', joined)\n",
-    "\n",
-    "for line in star_trek_dialogue:\n",
-    "    clean_dialogue.append(line.translate(trans))\n",
-    "\n",
-    "star_trek_dialogue = pd.DataFrame(clean_dialogue)"
+    "star_trek_dialogue = pd.DataFrame(star_trek_dialogue)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 278,
    "id": "6522a342",
    "metadata": {},
    "outputs": [
@@ -583,7 +556,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
+       "      <th>dialogue</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -612,7 +585,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                   0\n",
+       "                                            dialogue\n",
        "0                                  check the circuit\n",
        "1                                  all operating sir\n",
        "2  it cant be the screen then definitely somethin...\n",
@@ -620,7 +593,7 @@
        "4  no its something else theres still something o..."
       ]
      },
-     "execution_count": 72,
+     "execution_count": 278,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 279,
    "id": "93159892",
    "metadata": {},
    "outputs": [
@@ -658,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 280,
    "id": "90782d98",
    "metadata": {},
    "outputs": [],
