--- a/src/data_parsing/make_test_data.ipynb
+++ b/src/data_parsing/make_test_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "420fc012",
    "metadata": {},
    "outputs": [
@@ -157,10 +157,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "5e8950a1",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ameli/cse517p-project/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -202,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6f899f45",
    "metadata": {},
    "outputs": [],
@@ -269,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "id": "05de8b94",
    "metadata": {},
    "outputs": [],
@@ -280,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
    "id": "834cb79d",
    "metadata": {},
    "outputs": [],
@@ -294,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "id": "bf2802ff",
    "metadata": {},
    "outputs": [],
@@ -304,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 7,
    "id": "47474a58",
    "metadata": {},
    "outputs": [],
@@ -316,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 8,
    "id": "1a3c0933",
    "metadata": {},
    "outputs": [],
